clean up JS code, remove console logs; add Bootstrap autolayout grid class col-sm-6 to prevent improper stacking on smaller screen sizes; add code snippet to README; style background image so that the character in the image remains in the center of the crystals and screen regardless of screen size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
     background-image: url("../images/background.jpg");
+    background-size: contain;
  }
 
 h1 {
@@ -45,9 +46,7 @@ h2, h3, h4, h5 {
 	width: 150px;
 }
 
-/* Styling right 2 images to position them on the right side of the container */
+/* Styling the 2 right-most images to position them on the right side of the container */
 #img2, #img3 {
     float: right;
-    /* position: relative;
-    right: 0px; */
 }
